# SI

./: .gitignore  pyproject.toml
pretrained_models/FireRedVAD/: README.md
pretrained_models/FireRedVAD/AED/: model.pth.tar
pretrained_models/FireRedVAD/Stream-VAD/: model.pth.tar
pretrained_models/FireRedVAD/VAD/: model.pth.tar
protocols/baseline_200_25_26/: best.pt  reference_results.csv  reference_run.txt  test_speakers.txt  train_speakers.txt  val_speakers.txt  verify_summary.csv
runs/clean+esc50_snr10/tensorboard/: events.out.tfevents.1775640498.DESKTOP-35QGHP1.14816.0
runs/clean+esc50_snr10_20/tensorboard/: events.out.tfevents.1775645072.DESKTOP-35QGHP1.20016.0
runs/clean+esc50_snr15/tensorboard/: events.out.tfevents.1775644472.DESKTOP-35QGHP1.19688.0
runs/clean+esc50_snr20/tensorboard/: events.out.tfevents.1775593227.DESKTOP-35QGHP1.14804.0
runs/clean+esc50_snr20_30/tensorboard/: events.out.tfevents.1775668397.DESKTOP-35QGHP1.1564.0
runs/clean+esc50_snr20_rerun/tensorboard/: events.out.tfevents.1775645967.DESKTOP-35QGHP1.19532.0
scripts/: analyze_vad_filtering.py  check_dataset.py  chunk_wavs_3s.py  count_pt_files_360_500.py  print_cache_speakers.py  standardize_wavs.py  view_model.py
src/: augment.py  check_dataset.py  constants.py  dataset.py  features.py  metrics.py  model.py  precompute_logmels.py  run_experiments.py  samplers.py  sanity_verify.py  sweep_triplet.py  train.py  verify.py  view_model.py
src/config/: augment_config.py  data_config.py  experiment_config.py  feature_config.py  model_config.py  train_config.py
src/data/: augment.py  dataset.py  features.py
src/models/: model.py  samplers.py  triplet.py
src/pipelines/: precompute_logmels.py  run_experiments.py  train.py  verify.py
(+12 files in other folders)
